// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeatureSection > 应该匹配桌面端快照 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      aria-label="核心功能"
      class="MuiBox-root css-1hggc9u"
      role="main"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter MuiTypography-gutterBottom css-k6sdrn-MuiTypography-root"
      >
        核心功能
      </h2>
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-10jcxlz-MuiTypography-root"
      >
        我们提供全面的 AI 模型服务，让您的应用更智能
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-8wqzlf-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1p7m8ke-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-0"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.03 3.56c-1.67-1.39-3.74-2.3-6.03-2.51v2.01c1.73.19 3.31.88 4.61 1.92zM11 3.06V1.05c-2.29.2-4.36 1.12-6.03 2.51l1.42 1.42C7.69 3.94 9.27 3.25 11 3.06M4.98 6.39 3.56 4.97C2.17 6.64 1.26 8.71 1.05 11h2.01c.19-1.73.88-3.31 1.92-4.61M20.94 11h2.01c-.21-2.29-1.12-4.36-2.51-6.03l-1.42 1.42c1.04 1.3 1.73 2.88 1.92 4.61M7 12l3.44 1.56L12 17l1.56-3.44L17 12l-3.44-1.56L12 7l-1.56 3.44z"
                    />
                    <path
                      d="M12 21c-3.11 0-5.85-1.59-7.46-4H7v-2H1v6h2v-2.7c1.99 2.84 5.27 4.7 9 4.7 4.87 0 9-3.17 10.44-7.56l-1.96-.45C19.25 18.48 15.92 21 12 21"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  流式响应
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  支持流式输出，实时响应，提供更自然的对话体验
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1p7m8ke-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-1"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 8.57c-.79 0-1.43.64-1.43 1.43s.64 1.43 1.43 1.43 1.43-.64 1.43-1.43-.64-1.43-1.43-1.43"
                    />
                    <path
                      d="M13 3C9.25 3 6.2 5.94 6.02 9.64L4.1 12.2c-.25.33-.01.8.4.8H6v3c0 1.1.9 2 2 2h1v3h7v-4.68c2.36-1.12 4-3.53 4-6.32 0-3.87-3.13-7-7-7m3 7c0 .13-.01.26-.02.39l.83.66c.08.06.1.16.05.25l-.8 1.39c-.05.09-.16.12-.24.09l-.99-.4c-.21.16-.43.29-.67.39L14 13.83c-.01.1-.1.17-.2.17h-1.6c-.1 0-.18-.07-.2-.17l-.15-1.06c-.25-.1-.47-.23-.68-.39l-.99.4c-.09.03-.2 0-.25-.09l-.8-1.39c-.05-.08-.03-.19.05-.25l.84-.66c-.01-.13-.02-.26-.02-.39s.02-.27.04-.39l-.85-.66c-.08-.06-.1-.16-.05-.26l.8-1.38c.05-.09.15-.12.24-.09l1 .4c.2-.15.43-.29.67-.39L12 6.17c.02-.1.1-.17.2-.17h1.6c.1 0 .18.07.2.17l.15 1.06c.24.1.46.23.67.39l1-.4c.09-.03.2 0 .24.09l.8 1.38c.05.09.03.2-.05.26l-.85.66c.03.12.04.25.04.39"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  智能上下文
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  智能管理对话上下文，实现连贯的多轮对话
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1p7m8ke-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-2"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 8h4V4H4zm6 12h4v-4h-4zm-6 0h4v-4H4zm0-6h4v-4H4zm6 0h4v-4h-4zm6-10v4h4V4zm-6 4h4V4h-4zm6 6h4v-4h-4zm0 6h4v-4h-4z"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  多模型支持
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  支持多种主流模型，满足不同场景需求
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1p7m8ke-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-3"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11z"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  安全可控
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  数据安全有保障，支持自定义敏感词过滤
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureSection > 应该匹配移动端快照 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
  >
    <div
      aria-label="核心功能"
      class="MuiBox-root css-1hggc9u"
      role="main"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter MuiTypography-gutterBottom css-k6sdrn-MuiTypography-root"
      >
        核心功能
      </h2>
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-10jcxlz-MuiTypography-root"
      >
        我们提供全面的 AI 模型服务，让您的应用更智能
      </h6>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-8wqzlf-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-19ohs2l-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-0"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.03 3.56c-1.67-1.39-3.74-2.3-6.03-2.51v2.01c1.73.19 3.31.88 4.61 1.92zM11 3.06V1.05c-2.29.2-4.36 1.12-6.03 2.51l1.42 1.42C7.69 3.94 9.27 3.25 11 3.06M4.98 6.39 3.56 4.97C2.17 6.64 1.26 8.71 1.05 11h2.01c.19-1.73.88-3.31 1.92-4.61M20.94 11h2.01c-.21-2.29-1.12-4.36-2.51-6.03l-1.42 1.42c1.04 1.3 1.73 2.88 1.92 4.61M7 12l3.44 1.56L12 17l1.56-3.44L17 12l-3.44-1.56L12 7l-1.56 3.44z"
                    />
                    <path
                      d="M12 21c-3.11 0-5.85-1.59-7.46-4H7v-2H1v6h2v-2.7c1.99 2.84 5.27 4.7 9 4.7 4.87 0 9-3.17 10.44-7.56l-1.96-.45C19.25 18.48 15.92 21 12 21"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  流式响应
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  支持流式输出，实时响应，提供更自然的对话体验
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-19ohs2l-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-1"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 8.57c-.79 0-1.43.64-1.43 1.43s.64 1.43 1.43 1.43 1.43-.64 1.43-1.43-.64-1.43-1.43-1.43"
                    />
                    <path
                      d="M13 3C9.25 3 6.2 5.94 6.02 9.64L4.1 12.2c-.25.33-.01.8.4.8H6v3c0 1.1.9 2 2 2h1v3h7v-4.68c2.36-1.12 4-3.53 4-6.32 0-3.87-3.13-7-7-7m3 7c0 .13-.01.26-.02.39l.83.66c.08.06.1.16.05.25l-.8 1.39c-.05.09-.16.12-.24.09l-.99-.4c-.21.16-.43.29-.67.39L14 13.83c-.01.1-.1.17-.2.17h-1.6c-.1 0-.18-.07-.2-.17l-.15-1.06c-.25-.1-.47-.23-.68-.39l-.99.4c-.09.03-.2 0-.25-.09l-.8-1.39c-.05-.08-.03-.19.05-.25l.84-.66c-.01-.13-.02-.26-.02-.39s.02-.27.04-.39l-.85-.66c-.08-.06-.1-.16-.05-.26l.8-1.38c.05-.09.15-.12.24-.09l1 .4c.2-.15.43-.29.67-.39L12 6.17c.02-.1.1-.17.2-.17h1.6c.1 0 .18.07.2.17l.15 1.06c.24.1.46.23.67.39l1-.4c.09-.03.2 0 .24.09l.8 1.38c.05.09.03.2-.05.26l-.85.66c.03.12.04.25.04.39"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  智能上下文
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  智能管理对话上下文，实现连贯的多轮对话
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-19ohs2l-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-2"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 8h4V4H4zm6 12h4v-4h-4zm-6 0h4v-4H4zm0-6h4v-4H4zm6 0h4v-4h-4zm6-10v4h4V4zm-6 4h4V4h-4zm6 6h4v-4h-4zm0 6h4v-4h-4z"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  多模型支持
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  支持多种主流模型，满足不同场景需求
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-3 css-5jkmth-MuiGrid-root"
        >
          <div
            style="width: 100%; height: 100%; opacity: 0; transform: translateY(20px);"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-19ohs2l-MuiPaper-root-MuiCard-root"
              role="article"
            >
              <div
                class="MuiBox-root css-14d20i8"
              >
                <div
                  class="MuiBox-root css-16metcc"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1ha5wk2-MuiSvgIcon-root"
                    data-testid="feature-icon-3"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11z"
                    />
                  </svg>
                </div>
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1ndmryj-MuiTypography-root"
                >
                  安全可控
                </h3>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1leyb9s-MuiTypography-root"
                >
                  数据安全有保障，支持自定义敏感词过滤
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
